# easify

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/ai/: __init__.py  chat_provider.py  factory.py  ollama.py  prompts.py
app/autocorrect/: __init__.py  engine.py
app/bundled/: __init__.py  autocorrect.json  live_enrich_blocklist.txt  warmup_prompts.json
app/cache/: __init__.py  bootstrap.py  keying.py  service.py  store.py
app/cli/: __init__.py  autostart.py  doctor.py  health.py  l3_probe.py
app/config/: settings.py  toml_loader.py
app/context/: __init__.py  apps.py  detector.py  focus.py  input_context.py  intent.py
app/engine/: __init__.py  actions.py  buffer.py  engine.py  events.py  execution.py  expansion_contracts.py  guards.py  l0_compute.py  live_resolve.py  live_word.py  pending_tail.py  pipeline.py  preview_gate.py  router.py  service.py  tray_controller.py  types.py  undo_stack.py
app/inject/: __init__.py  accessibility.py  ax_macos.py  uia_windows.py
app/keyboard/: __init__.py  buffer.py  capture_fsm.py  keys.py  listener.py  runner.py
app/keyboard/backends/: __init__.py  evdev_hook.py  keyboard_hook.py
app/pipelines/: __init__.py  capture_pipeline.py  deps.py  live_pipeline.py  phrase.py  word.py
app/plugins/: __init__.py
app/policy/: __init__.py  engine.py  policy.py  policy_model.py
app/service/: __init__.py  expansion_service.py
app/snippets/: __init__.py  engine.py  promote.py  semantic_index.py  template.py
app/ui/: __init__.py  daemon_hooks.py  palette.py  preview.py  snippet_server.py  tray.py
app/utils/: __init__.py  clipboard.py  darwin_dispatch.py  expansion_log.py  hotkey_risks.py  live_enrich_blocklist.py  log.py  metrics.py
data/: autocorrect.json  config.example.toml
easify/: __init__.py  __main__.py  app.py  cli.py  clipboard.py  ollama_client.py  prompts.py  snippets.example.json  snippets.py
tests/: test_autostart.py  test_cache.py  test_cache_ttl.py  test_capture_buffer.py  test_capture_fsm.py  test_capture_pipeline.py  test_close_delimiter.py  test_darwin_dispatch.py  test_doctor.py  test_doctor_report.py  test_engine_v2.py  test_focus_compat.py  test_hotkey_and_journal.py  test_l0.py  test_l3_probe.py  test_live_enrich_blocklist.py  test_live_pipeline_legacy.py  test_live_word.py  test_new_fixes.py  test_phase2_context.py  test_phase3.py  test_phrase.py  test_pipeline.py  test_settings_toml.py  test_snippet_template.py  test_snippets.py
