[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "easify"
version = "0.3.0"
description = "Cross-platform AI text expansion: layered snippets, autocorrect, cache, local Ollama"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Easify contributors" }]
keywords = ["ollama", "expander", "keyboard", "ai", "pynput", "httpx", "easify"]
dependencies = [
    "httpx>=0.27.0",
    "pynput>=1.7.6",
    "pyperclip>=1.9.0",
    "rapidfuzz>=3.0.0",
]

[project.scripts]
easify = "app.main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["app*", "easify*"]

[tool.setuptools.package-data]
app = ["bundled/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
