[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "easify"
version = "0.6.4"
description = "Cross-platform AI text expansion: layered snippets, autocorrect, cache, local Ollama"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Easify contributors" }]
keywords = ["ollama", "expander", "keyboard", "ai", "pynput", "httpx", "easify"]
dependencies = [
    "httpx>=0.27.0",
    "pint>=0.23",
    "pillow>=10.0.0",
    "pynput>=1.7.6",
    "pyperclip>=1.9.0",
    "pystray>=0.19.4",
    "rapidfuzz>=3.0.0",
    "tomli>=2.0.1",
]

[project.scripts]
easify = "app.main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
keyboard = ["keyboard>=0.13.5"]
evdev = ["evdev>=1.6.1"]
semantic = ["sentence-transformers>=2.2.0"]

[tool.setuptools.packages.find]
include = ["app*", "easify*"]

[tool.setuptools.package-data]
app = ["bundled/*.json", "bundled/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
